first_form-page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,322 @@
 @charset "utf-8";
+/* apperranceが利かない */
+.wrapper {
+  background-color: #f2f6f7;
+  padding: 32px 0 ;
+  width: 100%;
+}
+
+.inner {
+  margin: 0 auto;
+  width: 640px;
+}
+
+.main {
+  background-color: #fff;
+  border: solid 1px #D3D3D3;
+  box-sizing: border-box;
+  box-shadow: 0 0 2px 1px #D3D3D3;
+  border-radius: 5px;
+  padding: 48px 64px;
+  margin-bottom: 32px;
+}
+
+.form-title {
+  color: #555;
+  margin-bottom: 5px;
+  font-size: 12px;
+}
+
+.box {
+  margin-bottom: 20px;
+}
+
+.input {
+  background-color: #fbfbfb;
+  border: solid 1px #d9d9d9;
+  border-radius: 5px;
+  box-sizing: border-box;
+  font-size: 14px;
+  height: 35px;
+  appearance: none;
+  -webkit-appearance: none;
+  padding: 5px;
+  width: 100%;
+}
+
+.input:focus {
+  border: solid 1px #99FF99;
+  box-shadow: 0 0 2px 1px #CCFFCC;
+  outline: none;
+}
+
+/* topcontent css */
+.top-content-text {
+  text-align: center;
+}
+
+.main-title {
+  color: #4e4e4e;
+  font-size: 25px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.sns-button_box {
+  align-items: center;
+  display: flex;
+  margin-bottom: 10px;
+  text-align: center;
+  justify-content: left;
+}
+
+.button-layout {
+  border-radius: 5px;
+  display: inline-block;
+  font-size: 14px;
+  margin-left: 10px;
+  padding: 15px 0;
+  text-decoration: none;
+  width: 100%;
+}
+
+.button-layout:first-child {
+  margin-left: 0;
+}
+
+.is-facebook {
+  background-color: #3b5998;
+  border: #3B5998;
+  color: #fff;
+}
+
+.is-google {
+  background-color: #fff;
+  border: solid 1px #D3D3D3;
+  color: #f00;
+}
+
+.is-facebook:hover {
+  background-color: #324e8b;
+}
+
+.is-google:hover {
+  background-color: #fbfbfb;
+}
+
+.top-content-text {
+  color: #949697;
+  font-size: 12px;
+}
+
+.devider {
+  align-items: center;
+  color: #949697;
+  display: flex;
+  font-size: 12px;
+  margin: 20px 0;
+}
+/* form-content　css */
+
+.devider::after, .devider::before {
+  background: #bbb;
+  box-sizing: border-box;
+  content: "";
+  flex-grow: 1;
+  height: 1px;
+  margin: 0 .4em;
+}
+
+.form {
+  color: #555;
+}
+
+.name-title::after {
+  content: "  ※";
+  color: #ee0000;
+}
+
+.names_box {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+/* 子要素４つあるから？ */
+.name_box {
+  width: 50%;
+}
+
+.name_box:first-child {
+  margin-right: 15px;
+}
+
+.radio_button {
+  cursor: pointer;
+}
+
+.radio_button_input {
+  display: none;
+}
+
+.radio_button span {
+  padding-left: 20px;
+  position: relative;
+  margin-right: 10px;
+}
+
+.radio_button span::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 15px;
+  height: 15px;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  background: #fbfbfb;
+}
+
+.radio_button_input:checked + span::after {
+  content: "";
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  width: 9px;
+  height: 9px;
+  background-color: #009a9a;
+  border-radius: 50%;
+}
+
+.select_from_box {
+  width: 100%;
+  position: relative;
+  display: inline-block;
+}
+
+.select_from_box::after {
+  content: '';
+  width: 6px;
+  height: 6px;
+  border-bottom: solid 2px #b4b3b3;
+  border-right: solid 2px #b4b3b3;
+  transform: rotate(45deg);
+  position: absolute;
+  top: 40%;
+  left: 47%;
+}
+
+.select_from {
+  appearance: none;
+  -webkit-appearance: none;
+  background-color: #fbfbfb;
+  border: solid 1px #ccc;
+  color: #666;
+  font-size: 14px; 
+  height: 35px;
+  outline: none;
+  padding: 5px;
+  width: 50%;
+}
+
+.select_from::-ms-expand {
+  display: none;
+}
+
+.mail-title:after {
+  content: "  ※";
+  color: #ee0000;
+}
+
+.password-title:after {
+  content: "  ※";
+  color: #ee0000;
+}
+
+.checkbox {
+  margin-bottom: 15px;
+}
+
+.checkbox_input {
+  display: none;
+}
+
+.checkbox_course span {
+  padding-left: 20px;
+  position: relative;
+}
+
+.checkbox_course span::before {
+  border: 1px solid #ccc;
+  background: #fbfbfb;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 15px;
+  height: 15px;
+}
+
+.checkbox_input:checked + span::after {
+  border-bottom: 3px solid #009a9a;
+  border-right: 3px solid #009a9a;
+  content: "";
+  position: absolute;
+  top: -5px;
+  transform: rotate(40deg);
+  left: 4px;
+  width: 10px;
+  height: 15px;
+}
+
+.textarea {
+  height: 100px;
+  padding: 5px 8px;
+  resize: none;
+}
+
+.button {
+  background-color: rgba(0,154,154, 0.8);
+  border-radius: 5px;
+  color: #fcfcfc;
+  cursor: pointer;
+  font-size: 14px;
+  height: 50px;
+  outline: none;
+  transition: .5s;
+  width: 100%;
+}
+
+.button:hover {
+  background-color: #009a9a;
+  opacity: 1.0;
+}
+
+.button:active {
+  background-color: #fcfcfc;
+  color: #009a9a;
+  opacity: 1.0;
+}
+
+.inner-text {
+  font-size: 13px;
+  line-height: 1.5;
+}
+
+.link-text {
+  color: #009a9a;
+}
+
+.link-text:hover {
+  opacity: 0.7;
+}
+
+.footer {
+  font-size: 13px;
+  line-height: 2.0;
+  text-align: center;
+}
+
+.footer .link-text:hover {
+  border-bottom: 1px solid #009a9a;
+}
